Update high-low notebooks. Enhance SSH connection handling and syncing processes (jobs, done, datasets).

--- a/packages/syft-runtimes/notebooks/high-low/high_low_local.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local.ipynb
@@ -15,8 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from loguru import logger\n",
+    "\n",
     "import syft_runtimes.high_low as syhl\n",
-    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir"
+    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir\n",
+    "from syft_core.config import CONFIG_PATH_ENV\n",
+    "import syft_datasets as syd"
    ]
   },
   {
@@ -162,16 +167,8 @@
     "data_dir = Path(\"./data\")\n",
     "data_dir.mkdir(parents=True, exist_ok=True)\n",
     "mock_df.to_csv(data_dir / \"mock_data.csv\", index=False)\n",
-    "private_df.to_csv(data_dir / \"private_data.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "private_df.to_csv(data_dir / \"private_data.csv\", index=False)\n",
+    "\n",
     "readme_content = \"\"\"\n",
     "# My example high-side dataset\n",
     "\"\"\"\n",
@@ -182,25 +179,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_core.config import CONFIG_PATH_ENV\n",
-    "import os\n",
-    "\n",
-    "# Set the high client as default syftbox client\n",
-    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_datasets as syd\n",
+    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)\n",
     "\n",
     "DATASET_NAME = \"my_cool_dataset\"\n",
     "\n",
@@ -209,16 +192,13 @@
     "    mock_path=data_dir / \"mock_data.csv\",\n",
     "    private_path=data_dir / \"private_data.csv\",\n",
     "    readme_path=readme_path,\n",
-    "    summary=\"This is a mock dataset for demonstration purposes.\",\n",
-    "    tags=[\"example\", \"testing\", \"highside\"],\n",
-    "    location=highlow_identifier,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +216,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now see the dataset on the low side!\n",
+    "from syft_datasets import SyftDatasetManager\n",
+    "\n",
+    "highside_dataset_manager = SyftDatasetManager(syftbox_client=highside_client)\n",
+    "highside_datasets = highside_dataset_manager.get_all()\n",
+    "\n",
+    "highside_datasets"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "## DO (High): Connect to low-side"
@@ -245,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "Connecting via local connection"
@@ -254,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "## DO (High): Rsync the dataset (mock part only) to the low side"
@@ -275,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,10 +284,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "source": [
-    "## DO (Low): Checks if the dataset exists (only the mock part)"
+    "## DO (High): Rsync another dataset (mock part only) to the low side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)\n",
+    "\n",
+    "DATASET_2_NAME = \"my_cool_dataset_2\"\n",
+    "\n",
+    "highside_dataset = syd.create(\n",
+    "    name=DATASET_2_NAME,\n",
+    "    mock_path=data_dir / \"mock_data.csv\",\n",
+    "    private_path=data_dir / \"private_data.csv\",\n",
+    "    readme_path=readme_path,\n",
+    ")"
    ]
   },
   {
@@ -301,23 +316,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can now see the dataset on the low side!\n",
-    "from syft_datasets import SyftDatasetManager\n",
-    "\n",
-    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_client)\n",
-    "lowside_datasets = lowside_dataset_manager.get_all()\n",
-    "\n",
-    "lowside_datasets"
+    "# Sync the dataset (mock part) to the low side\n",
+    "highside_client.sync_dataset(\n",
+    "    dataset_name=DATASET_2_NAME,\n",
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "25",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lowside_datasets[0].mock_dir"
+    "## DO (Low): Checks if the dataset exists (only the mock part)"
    ]
   },
   {
@@ -327,12 +338,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_datasets[0].private_dir  # should raise an error"
+    "# We can now see the dataset on the low side!\n",
+    "from syft_datasets import SyftDatasetManager\n",
+    "\n",
+    "lowside_syftbox_client = do_stack_1.client\n",
+    "\n",
+    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_syftbox_client)\n",
+    "lowside_datasets = lowside_dataset_manager.get_all()\n",
+    "\n",
+    "lowside_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in lowside_datasets:\n",
+    "    print(dataset.mock_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    for dataset in lowside_datasets:\n",
+    "        print(dataset.private_dir)\n",
+    "except Exception as e:\n",
+    "    logger.error(\n",
+    "        \"Can't access private dataset from low side because it's a high-low dataset\"\n",
+    "    )\n",
+    "    logger.error(e)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "source": [
     "## DS: sees that the mock dataset is uploaded to the SyftBox network, play with it and submits a job to the DO's low datasite"
@@ -341,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,28 +401,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
-   "metadata": {},
-   "source": [
-    "## DO (High): Review and rsync pending jobs from the low side client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "highside_client.sync_pending_jobs()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "31",
    "metadata": {},
    "source": [
-    "## DO (High): Runs the job on private data\n"
+    "## DO (Low): Review and approve jobs"
    ]
   },
   {
@@ -385,17 +414,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# High side client runs the jobs using syft_runtimes\n",
-    "import syft_runtimes as syru\n",
-    "\n",
-    "pending_jobs = syru.get_pending_jobs(client=highside_client)\n",
-    "for job in pending_jobs:\n",
-    "    highside_client.run_private(job)"
+    "jobs = lowside_syftbox_client.jobs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_syftbox_client.approve(\n",
+    "    jobs[0]\n",
+    ")  # move the job to private/<email>/syft_runtimes/<runtime_name>/jobs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "34",
+   "metadata": {},
+   "source": [
+    "## DO (High): Rsync pending jobs from the low side client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_client.sync_pending_jobs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36",
+   "metadata": {},
+   "source": [
+    "## DO (High): Runs the job on private data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pending_jobs = highside_client.job.get_all()  # get all pending jobs\n",
+    "for job in pending_jobs:\n",
+    "    highside_client.run_private(job)  # run the job using syft_runtimes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38",
    "metadata": {},
    "source": [
     "## DO (High): Review and rsync job results in the `done` folder to the lowside client"
@@ -404,12 +478,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_client.sync_done_jobs()"
+    "highside_client.sync_done_jobs(ignore_existing=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
