--- a/packages/syft-runtimes/notebooks/high-low/highside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/highside.ipynb
@@ -8,39 +8,34 @@
    "outputs": [],
    "source": [
     "import syft_runtimes.high_low as syhl\n",
-    "from syft_core import Client\n",
     "import syft_datasets as syd\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_core\n",
-    "\n",
-    "syft_core.__version__"
+    "from syft_notebook_ui.utils import show_dir"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
-    "## Initialize the high datasite (secure, self-contained)"
+    "## High and Low Configs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highlow_identifier = \"highlow-1234\""
+    "email = \"flower-test-group-2@openmined.org\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "SSH config to connect to the low datasite"
    ]
   },
   {
@@ -50,10 +45,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client.load(\"./config.json\")\n",
+    "from pathlib import Path\n",
     "\n",
+    "private_key_path = Path(\"~/.ssh/flower-vm-2\").expanduser()\n",
+    "assert private_key_path.exists()\n",
+    "\n",
+    "ssh_config: dict = {\n",
+    "    \"host\": \"48.216.217.94\",\n",
+    "    \"user\": \"azureuser\",\n",
+    "    \"port\": 22,\n",
+    "    \"ssh_key_path\": private_key_path,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Initialize the high datasite (secure, self-contained)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highlow_identifier = \"highlow-1234\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
-    "    email=client.email,\n",
+    "    email=email,\n",
     "    highlow_identifier=highlow_identifier,\n",
     "    force_overwrite=True,\n",
     ")"
@@ -62,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +101,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_dir(highside_client.workspace.data_dir.parents[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "10",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -84,11 +125,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_NAME = \"my_cool_dataset\"\n",
+    "DATASET_NAME = \"my_cool_dataset_3\"\n",
     "data_dir = Path(\"./data\")\n",
     "\n",
     "highside_dataset = syd.create(\n",
@@ -96,9 +137,6 @@
     "    mock_path=data_dir / \"mock_data.csv\",\n",
     "    private_path=data_dir / \"private_data.csv\",\n",
     "    readme_path=data_dir / \"readme.md\",\n",
-    "    summary=\"This is a mock dataset for demonstration purposes.\",\n",
-    "    tags=[\"example\", \"testing\", \"highside\"],\n",
-    "    location=highlow_identifier,\n",
     "    syftbox_config_path=highside_client.config_path,\n",
     ")"
    ]
@@ -106,16 +144,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_dataset"
+    "highside_dataset.private_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_dir(highside_client.workspace.data_dir.parents[1])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "14",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -124,23 +172,16 @@
    "source": [
     "## Configure secure connection to low side\n",
     "\n",
-    "SSH connection - dictionary with the essentials"
+    "SSH connection using the `ssh_config` dictionary"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssh_config: dict = {\n",
-    "    \"host\": \"48.216.217.94\",\n",
-    "    \"user\": \"azureuser\",\n",
-    "    \"port\": 22,\n",
-    "    \"ssh_key_path\": \"~/.ssh/flower-vm-2\",\n",
-    "}\n",
-    "\n",
     "lowside_client = highside_client.lowside_connect(\n",
     "    highlow_identifier=highlow_identifier,\n",
     "    ssh_config=ssh_config,\n",
@@ -151,27 +192,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_client.connection_string"
+    "lowside_client.ssh_connection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowside_client.ssh_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +214,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "## Sync the pending jobs from the low side"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +234,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_dir(highside_client.runtime_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
+   "source": [
+    "## Sync the done jobs to the low side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(highside_client.runtime_dir / \"done\" / \"job01\").mkdir(exist_ok=True)\n",
+    "(highside_client.runtime_dir / \"done\" / \"job01\" / \"result.json\").touch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_dir(highside_client.runtime_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
     "highside_client.sync_done_jobs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
