Update version to 0.1.5 and enhance permission handling for private data access. Updated dependencies for syft-core, syft-event, syft-rpc, and typing-extensions.

--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -161,7 +161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_client.dataset.get(name=\"dataset-1\").private_path"
+    "try:\n",
+    "    ds_client.dataset.get(name=\"dataset-1\").private_path\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
