remove lowside client class. Connecting to the lowside client automatically when init high side client.

--- a/packages/syft-runtimes/notebooks/high-low/high_low_local.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local.ipynb
@@ -96,9 +96,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# High side settings\n",
     "highlow_identifier = \"highlow-1234\"\n",
-    "highlow_identifier"
+    "\n",
+    "# First, initialize the high datasite - runs on the low side\n",
+    "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
+    "    email=DO,\n",
+    "    highlow_identifier=highlow_identifier,\n",
+    "    syftbox_dir=highside_syftbox_dir,\n",
+    "    lowside_syftbox_dir=lowside_syftbox_dir,\n",
+    "    connection_config=None,  # default to local lowside connection\n",
+    "    force_overwrite=True,\n",
+    ")"
    ]
   },
   {
@@ -108,28 +116,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, initialize the high datasite - runs on the low side\n",
-    "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
-    "    email=DO,\n",
-    "    highlow_identifier=highlow_identifier,\n",
-    "    data_dir=highside_syftbox_dir,\n",
-    "    force_overwrite=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "highside_client.workspace.data_dir"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "## DO (high): Create a high-side dataset"
@@ -138,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +185,16 @@
     "    private_path=data_dir / \"private_data.csv\",\n",
     "    readme_path=readme_path,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_dataset"
    ]
   },
   {
@@ -236,42 +238,13 @@
    "id": "17",
    "metadata": {},
    "source": [
-    "## DO (High): Connect to low-side"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18",
-   "metadata": {},
-   "source": [
-    "Connecting via local connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowside_client = highside_client.lowside_connect(\n",
-    "    highlow_identifier=highlow_identifier,\n",
-    "    lowside_data_dir=lowside_syftbox_dir,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20",
-   "metadata": {},
-   "source": [
     "## DO (High): Rsync the dataset (mock part only) to the low side"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "19",
    "metadata": {},
    "source": [
     "## DO (High): Rsync another dataset (mock part only) to the low side"
@@ -293,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "22",
    "metadata": {},
    "source": [
     "## DO (Low): Checks if the dataset exists (only the mock part)"
@@ -334,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,18 +336,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in lowside_datasets:\n",
+    "    try:\n",
+    "        print(dataset.private_dir)\n",
+    "    except Exception as e:\n",
+    "        logger.error(\n",
+    "            f\"Can't access private dataset from low side because it's a high-low dataset: {e}\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "## DS: sees that the mock dataset is uploaded to the SyftBox network, play with it and submits a job to the DO's low datasite\n",
+    "```python\n",
+    "from syft_rds import init_session\n",
+    "\n",
+    "ds_client = init_session(host=DO)\n",
+    "\n",
+    "ds_client.job.submit(\n",
+    "    name=\"job_name\",\n",
+    "    user_code_path=\"path_to_code\",\n",
+    "    dataset_name=\"dataset_name_to_run_on\",\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "The job will go to the public folder of the DO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "## DO (Low): Review and approve jobs\n",
+    "\n",
+    "```python\n",
+    "jobs = lowside_syftbox_client.job.get_all(status=\"pending_code_review\")\n",
+    "\n",
+    "lowside_syftbox_client.approve(\n",
+    "    jobs[0]\n",
+    ")  # move the job to private/<email>/syft_runtimes/<runtime_name>/jobs\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    for dataset in lowside_datasets:\n",
-    "        print(dataset.private_dir)\n",
-    "except Exception as e:\n",
-    "    logger.error(\n",
-    "        \"Can't access private dataset from low side because it's a high-low dataset\"\n",
-    "    )\n",
-    "    logger.error(e)"
+    "# mock DS submission and DO approval\n",
+    "\n",
+    "print(f\"{highside_client._get_lowside_runtime_dir() = }\")\n",
+    "(highside_client._get_lowside_runtime_dir() / \"jobs\" / \"job01\").mkdir(\n",
+    "    exist_ok=True, parents=True\n",
+    ")\n",
+    "(highside_client._get_lowside_runtime_dir() / \"jobs\" / \"job01\" / \"main.py\").touch()"
    ]
   },
   {
@@ -382,7 +408,7 @@
    "id": "29",
    "metadata": {},
    "source": [
-    "## DS: sees that the mock dataset is uploaded to the SyftBox network, play with it and submits a job to the DO's low datasite"
+    "## DO (High): Rsync pending jobs from the low side client"
    ]
   },
   {
@@ -392,11 +418,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds import init_session\n",
+    "highside_client.sync_pending_jobs()\n",
     "\n",
-    "ds_client = init_session(host=DO)\n",
-    "\n",
-    "ds_client.job.submit(...)"
+    "assert (highside_client.runtime_dir / \"jobs\" / \"job01\").exists()\n",
+    "assert (highside_client.runtime_dir / \"jobs\" / \"job01\" / \"main.py\").exists()"
    ]
   },
   {
@@ -404,7 +429,13 @@
    "id": "31",
    "metadata": {},
    "source": [
-    "## DO (Low): Review and approve jobs"
+    "## DO (High): Runs the job on private data\n",
+    "\n",
+    "```python\n",
+    "pending_jobs = highside_client.job.get_all(status=\"pending_code_review\")  # get all pending jobs\n",
+    "for job in pending_jobs:\n",
+    "    highside_client.run_private(job)  # run the job using syft_runtimes\n",
+    "```"
    ]
   },
   {
@@ -414,27 +445,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = lowside_syftbox_client.jobs()"
+    "# mock DO runs job successfully\n",
+    "\n",
+    "print(f\"{highside_client.runtime_dir = }\")\n",
+    "(highside_client.runtime_dir / \"done\" / \"job01\").mkdir(exist_ok=True, parents=True)\n",
+    "(highside_client.runtime_dir / \"done\" / \"job01\" / \"output.txt\").touch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33",
+   "metadata": {},
+   "source": [
+    "## DO (High): Review and rsync job results in the `done` folder to the lowside client"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_syftbox_client.approve(\n",
-    "    jobs[0]\n",
-    ")  # move the job to private/<email>/syft_runtimes/<runtime_name>/jobs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34",
-   "metadata": {},
-   "source": [
-    "## DO (High): Rsync pending jobs from the low side client"
+    "highside_client.sync_done_jobs()"
    ]
   },
   {
@@ -444,51 +477,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_client.sync_pending_jobs()"
+    "assert (highside_client._get_lowside_runtime_dir() / \"done\" / \"job01\").exists()\n",
+    "(highside_client._get_lowside_runtime_dir() / \"done\" / \"job01\" / \"output.txt\").exists()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "36",
-   "metadata": {},
-   "source": [
-    "## DO (High): Runs the job on private data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pending_jobs = highside_client.job.get_all()  # get all pending jobs\n",
-    "for job in pending_jobs:\n",
-    "    highside_client.run_private(job)  # run the job using syft_runtimes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38",
-   "metadata": {},
-   "source": [
-    "## DO (High): Review and rsync job results in the `done` folder to the lowside client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "highside_client.sync_done_jobs(ignore_existing=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": []
