--- a/packages/syft-runtimes/notebooks/high-low/highside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/highside.ipynb
@@ -21,9 +21,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "DO's email"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +40,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "source": [
-    "SSH config to connect to the low datasite"
+    "The connection config (SSH in this case) to connect to the low datasite"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,20 +68,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
-   "source": [
-    "## Initialize the high datasite (secure, self-contained)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "highlow_identifier = \"highlow-1234\""
+    "The name of the high low runtime"
    ]
   },
   {
@@ -83,21 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
-    "    email=email,\n",
-    "    highlow_identifier=highlow_identifier,\n",
-    "    force_overwrite=True,\n",
-    ")"
+    "highlow_identifier = \"highlow-1234\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "highside_client.config_path"
+    "## Initialize the high datasite (secure, self-contained)"
    ]
   },
   {
@@ -107,12 +99,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
+    "    email=email,\n",
+    "    highlow_identifier=highlow_identifier,\n",
+    "    connection_config=ssh_config,\n",
+    "    lowside_syftbox_dir=\"/home/azureuser/SyftBox\",  # the location of the SyftBox dir on the low side\n",
+    "    force_overwrite=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highside_client.config_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "show_dir(highside_client.workspace.data_dir.parents[1])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "12",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -125,11 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_NAME = \"my_cool_dataset_3\"\n",
+    "DATASET_NAME = \"my_cool_dataset\"\n",
     "data_dir = Path(\"./data\")\n",
     "\n",
     "highside_dataset = syd.create(\n",
@@ -144,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,40 +181,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {
     "vscode": {
      "languageId": "raw"
     }
    },
    "source": [
-    "## Configure secure connection to low side\n",
+    "## Sync dataset to low side\n",
     "\n",
-    "SSH connection using the `ssh_config` dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowside_client = highside_client.lowside_connect(\n",
-    "    highlow_identifier=highlow_identifier,\n",
-    "    ssh_config=ssh_config,\n",
-    "    lowside_data_dir=\"/home/azureuser/SyftBox\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowside_client.ssh_connection"
+    "The connection to the low side was automatically configured during initialization using the `ssh_config` dictionary."
    ]
   },
   {
@@ -222,13 +216,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "19",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "highside_client.sync_pending_jobs()"
+    "Go to the low side VM and accept some jobs to the `SyftBox/private/<email>/syft_runtimes/highlow-1234/jobs`"
    ]
   },
   {
@@ -238,21 +230,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_dir(highside_client.runtime_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21",
-   "metadata": {},
-   "source": [
-    "## Sync the done jobs to the low side"
+    "highside_client.sync_pending_jobs()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_dir(highside_client.runtime_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22",
+   "metadata": {},
+   "source": [
+    "## Sync the done jobs to the low side\n",
+    "\n",
+    "Assume the high side client runs the `job01` and output the results to `done/job01`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
