--- a/packages/syft-runtimes/notebooks/high-low/lowside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/lowside.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "from syft_core import Client\n",
     "from syft_datasets import SyftDatasetManager\n",
+    "from syft_notebook_ui.utils import show_dir\n",
     "\n",
     "lowside_client = Client.load()"
    ]
@@ -44,6 +45,27 @@
    "outputs": [],
    "source": [
     "lowside_datasets[0].private_dir  # should raise error if it's a high-low dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_runtime_dir = (\n",
+    "    lowside_client.workspace.data_dir\n",
+    "    / \"private\"\n",
+    "    / lowside_client.email\n",
+    "    / \"syft_runtimes\"\n",
+    "    / \"highlow-1234\"\n",
+    ")\n",
+    "job_dir = lowside_runtime_dir / \"jobs\"\n",
+    "done_dir = lowside_runtime_dir / \"done\"\n",
+    "job_dir.exists()\n",
+    "done_dir.exists()\n",
+    "show_dir(lowside_runtime_dir)"
    ]
   }
  ],
