improve high low integration tests

--- a/packages/syft-runtimes/notebooks/high-low/lowside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/lowside.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_datasets[0].mock_dir"
+    "for dataset in lowside_datasets:\n",
+    "    print(f\"Dataset Name: {dataset.name}, mock dir: {lowside_datasets[0].mock_dir}\")"
    ]
   },
   {
@@ -44,7 +45,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_datasets[0].private_dir  # should raise error if it's a high-low dataset"
+    "from loguru import logger\n",
+    "\n",
+    "for dataset in lowside_datasets:\n",
+    "    try:\n",
+    "        print(\n",
+    "            f\"Dataset Name: {dataset.name}, mock dir: {lowside_datasets[0].private_dir}\"\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"Error accessing private_dir for dataset {dataset.name}: {e}\")"
    ]
   },
   {
@@ -65,6 +74,44 @@
     "done_dir = lowside_runtime_dir / \"done\"\n",
     "job_dir.exists()\n",
     "done_dir.exists()\n",
+    "show_dir(lowside_runtime_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "Mocking some jobs submitted and approved by the DO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(job_dir / \"job01\").mkdir(exist_ok=True)\n",
+    "(job_dir / \"job01\" / \"main.py\").touch()\n",
+    "show_dir(lowside_runtime_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "After the high side sycns the pending jobs, run and get the results, and then sync the done jobs, show dir again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "show_dir(lowside_runtime_dir)"
    ]
   }
