--- a/packages/syft-runtimes/notebooks/high-low/highside.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/highside.ipynb
@@ -102,8 +102,8 @@
     "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
     "    email=email,\n",
     "    highlow_identifier=highlow_identifier,\n",
-    "    connection_config=ssh_config,\n",
     "    lowside_syftbox_dir=\"/home/azureuser/SyftBox\",  # the location of the SyftBox dir on the low side\n",
+    "    connection_config=ssh_config,\n",
     "    force_overwrite=True,\n",
     ")"
    ]
@@ -212,12 +212,45 @@
    "id": "18",
    "metadata": {},
    "source": [
+    "## Sync another dataset to the low side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_NAME = \"my_cool_dataset_2\"\n",
+    "data_dir = Path(\"./data\")\n",
+    "\n",
+    "highside_dataset = syd.create(\n",
+    "    name=DATASET_NAME,\n",
+    "    mock_path=data_dir / \"mock_data.csv\",\n",
+    "    private_path=data_dir / \"private_data.csv\",\n",
+    "    readme_path=data_dir / \"readme.md\",\n",
+    "    syftbox_config_path=highside_client.config_path,\n",
+    ")\n",
+    "\n",
+    "# Sync the dataset (mock part) to the low side\n",
+    "highside_client.sync_dataset(\n",
+    "    dataset_name=DATASET_NAME,\n",
+    "    verbose=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
     "## Sync the pending jobs from the low side"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "source": [
     "Go to the low side VM and accept some jobs to the `SyftBox/private/<email>/syft_runtimes/highlow-1234/jobs`"
@@ -226,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "source": [
     "## Sync the done jobs to the low side\n",
@@ -256,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
